<resources>
    <string name="app_name">Ideamy</string>
    <string name="app_nama_caps">IDEAMY</string>
    <string name="nama_app">Idea Academy</string>
    <string name="slogan_app">Idea Academy made easy</string>
    <string name="versi">Version 1.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_masuk">Masuk</string>
    <string name="next">Next</string>
    <string name="tv_email_telp">Email/Nomor Telepon</string>
    <string name="masukkan_email">Masukkan Email Anda</string>
    <string name="hint_masukkan_email">Masukkan Email</string>
    <string name="hint_email">Contoh: johncute21@gmail.com</string>
    <string name="sandi">Password</string>
    <string name="lupa_sandi">Lupa Kata Sandi</string>
    <string name="tanya_akun">Belum Punya Akun?</string>
    <string name="tanya_akun_regis">sudah Punya Akun?</string>
    <string name="insert_sandi">Masukkan Password</string>
    <string name="buat_akun">Daftar di sini</string>
    <string name="masuk_akun">masuk disini</string>
    <string name="tanpa_login">Masuk Tanpa Login</string>
    <string name="daftar">Daftar</string>
    <string name="Required">Required*</string>
    <string name="Beranda">Beranda</string>
    <string name="Notifikasi">Notifikasi</string>
    <string name="Kelas">Kelas</string>
    <string name="Kursus">Kursus</string>
    <string name="kursus_populer">Kursus Populer</string>
    <string name="Akun">Akun</string>
    <string name="profil">Profil Saya</string>
    <string name="keluar">Keluar</string>
    <string name="filter_new">Paling baru</string>
    <string name="filter_populer">Paling populer</string>
    <string name="filter_baru">Baru</string>
    <string name="kategori">Kategori</string>
    <string name="kategori_ui">UI/UX Design</string>
    <string name="kategori_web_dev">Web Development</string>
    <string name="kategori_and_dev">Android development</string>
    <string name="kategori_data_scie">Data Science</string>
    <string name="kategori_business_int">Business Intelligence</string>
    <string name="level">Level Kesulitan</string>
    <string name="level_all">Semua Level</string>
    <string name="level_beginner">Beginner Level</string>
    <string name="level_medium">Intermediate Level</string>
    <string name="level_hard">Advanced Level</string>
    <string name="topik">Topik Kelas</string>
    <string name="filter">Filter</string>
    <string name="btn_terapkan_filter">Terapkan Filter</string>
    <string name="text_delete_filter">Hapus Filter</string>
    <string name="user_nama">Nama</string>
    <string name="user_email">Email</string>
    <string name="user_telp">No Telephone</string>
    <string name="user_create_pass">Buat Password</string>
    <string name="hint_nama_user">Nama Lengkap</string>
    <string name="hint_user_telp">+62</string>
    <string name="hint_user_pass">Buat password</string>
    <string name="selangkah_prem">Selangkah lagi menuju</string>
    <string name="kelas_prem">Kelas Premium</string>
    <string name="kelas_lain">Kelas Lainnya</string>
    <string name="materi_lain">Materi Lainnya</string>
    <string name="kelas_berjalan">Kelas Berjalan</string>
    <string name="materi">Materi Belajar</string>
    <string name="chapter">Chapter</string>
    <string name="jdl_chap">Pendahuluan</string>
    <string name="durasi_chp">1 Menit</string>
    <string name="nama_kategori">Nama Kategori</string>
    <string name="topic">Topic</string>
    <string name="publis">Publisher</string>
    <string name="lvl_course">Level Course</string>
    <string name="total_durasi">Total Times</string>
    <string name="kelas_tentang">Tentang Kelas</string>
    <string name="des_tentang_kelas">Deskripsi Tentang Kelas</string>
    <string name="kelas_ditujukan">Kelas Ini Ditujukan Untuk</string>
    <string name="desk_kelas_ditujukan">Deskripsi Kelas Ini Ditujukan Untuk</string>
    <string name="kelas_rate">5.0</string>
    <string name="jenis_prem">Premium</string>
    <string name="kelas_desk">Intro to Basic of User Interaction Design</string>
    <string name="kelas_creator">by Simon Doe</string>
    <string name="jml_modul">5 Modul</string>
    <string name="durasi">45 Menit</string>
    <string name="jml_durasi">4 Jam</string>
    <string name="mulai_kelas">Mulai Kelas</string>
    <string name="judul_sub">Tujuan Mengikuti Kelas Design System</string>
    <string name="beli">Beli</string>
    <string name="harga">Harga</string>
    <string name="ppn">PPN 11%</string>
    <string name="total_payment">Total Bayar</string>
    <string name="harga_rupiah">Rp. 0</string>
    <string name="jumlah">Jumlah</string>
    <string name="harga_course">Rp 349.000</string>
    <string name="btn_bank">Bank Transfer</string>
    <string name="transfer_bank">Transfer ke bank berikut:</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="cont_nama_bank">Bank Central Asia</string>
    <string name="tv_an">Atas Nama</string>
    <string name="norek">Nomer Rekening</string>
    <string name="cont_norek">123-456-7890</string>
    <string name="tv_CC">Credit Card</string>
    <string name="no_kartu">Card Number</string>
    <string name="cont_no_card">0101010101010</string>
    <string name="nama_CC">Card Holder Name</string>
    <string name="hint_nama_CC">Jeff Bezos</string>
    <string name="cvv">CVV</string>
    <string name="hint_cvv">123</string>
    <string name="exp">Expiry Date</string>
    <string name="hint_exp">08/24</string>
    <string name="beli_sekarang">Beli Sekarang</string>
    <string name="pay">Bayar dan Ikuti Kelas Selamanya</string>
    <string name="onBoarding">OnBoarding...</string>
    <string name="persiapan_tv">Persiapkan hal berikut untuk belajar yang maksimal</string>
    <string name="btn_ikut_kelas">Ikuti Kelas</string>
    <string name="ubah_pass">Ubah Password</string>
    <string name="pass_lama">Masukkan Password Lama</string>
    <string name="pass_baru">Masukkan Password Baru</string>
    <string name="ulang_pass_baru">Ulangi Password Baru</string>
    <string name="join_tele">Join Grup Telegram</string>
    <string name="riwayat_pembayaran">Riwayat Pembayaran</string>
    <string name="hint_search">Cari Kursus Terbaik.....</string>
    <string name="view_all">Lihat Semua </string>
    <string name="teks_view">TEKSSS VIEW</string>
    <string name="insert_OTP">Masukkan OTP</string>
    <string name="desk_otp">Ketik 6 digit kode yang dikirimkan ke Email</string>
    <string name="resend_otp">Kirim ulang OTP dalam $60 detik </string>
    <string name="btn_send">KIRIM</string>
    <string name="btn_save">Simpan</string>
    <string name="reset_pass">Reset Password</string>
    <string name="Pengumuman">Pengumuman</string>
    <string name="tanggal_notifikasi">Tanggal Notifikasi</string>
    <string name="isi_notif">Isi Pesan Yang Di Sampaikan </string>
    <string name="botsheet_belajar_text">     Mempunyai akun figma atau install Adobe XD\nMenggunakan internet minimal kecepatan 2Mbps\nBelajar di tempat yang nyaman</string>
    <string name="moduleContent">Tujuan Mengikuti Kelas Design System</string>
    <string name="home">Home</string>
    <string name="bintang">bintang</string>
    <string name="imagedefault">imageDefault</string>
    <string name="timer">timer</string>
    <string name="lamp">lamp</string>
    <string name="progressbar">progressbar</string>
    <string name="title_course">title course</string>
    <string name="close">close</string>
    <string name="search">search</string>
    <string name="kelas_tidak_ditemukan">Kelas tidak ditemukan</string>
    <string name="materi_belajar">Materi Belajar</string>
    <string name="android">Android</string>
    <string name="todo">TODO</string>
    <string name="setting">setting</string>
    <string name="leave">leave</string>
    <string name="cart">cart</string>
    <string name="pencil">pencil</string>
    <string name="minta_kode_baru_via_email">Minta kode baru via email</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="address">Address</string>
    <string name="no_telepon">No Telepon</string>
    <string name="nama">Nama</string>
    <string name="logo">logo</string>
    <string name="upss_anda_belum_memiliki_sebuah_kelas">UPSS! Anda belum memiliki sebuah kelas</string>
    <string name="cari_kelas">Cari Kelas</string>
    <string name="visa">visa</string>
    <string name="mastercard">mastercard</string>
    <string name="paypal">paypal</string>
    <string name="playerview">playerview</string>
    <string name="terapkan_filter">Terapkan Filter</string>
    <string name="hapus_filter">Hapus Filter</string>
    <string name="terapkan_filter2">Terapkan Filter</string>
    <string name="paling_baru">Paling Baru</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advance">Advance</string>
    <string name="ios_development">IOS Development</string>
    <string name="paling_populer">Paling Populer</string>
    <string name="promo">Promo</string>
    <string name="ui_ux_design">UI/UX Design</string>
    <string name="web_development">Web Development</string>
    <string name="android_development">Android Development</string>
    <string name="data_science">Data Science</string>
    <string name="product_management">Product Management</string>
    <string name="level_kesulitan">Level Kesulitan</string>
    <string name="beranda">Beranda</string>
    <string name="berhasil">berhasil</string>
    <string name="registrasi_n_berhasil">Registrasi\n Berhasil!</string>
    <string name="mulai_belajar">Mulai Belajar</string>
    <string name="e_receipt_telah_dikirim_ke_email">E-receipt telah dikirim ke email.</string>
    <string name="selamat">Selamat!</string>
    <string name="kembali_ke_beranda">Kembali ke Beranda</string>
    <string name="transaksi_pembayaran_kelas_premium_berhasil">Transaksi pembayaran kelas berhasil!</string>
    <string name="imagebelajarbotsheet">imageBelajarBotSheet</string>
    <string name="maaf_anda_harus_login_terlebih_dahulu">Maaf,Anda harus login terlebih dahulu</string>
    <string name="oopss">Oopss!</string>
    <string name="logoideamy" />
    <string name="submit">Update Profile</string>
    <string name="kelas_free">Kelas Free</string>
    <string name="ikuti_sekarang">Ikuti Sekarang</string>
    <string name="terbaru">Terbaru</string>
    <string name="terpopuler">Terpopuler</string>
    <string name="urutkan">Urutkan</string>
    <string name="_1">1</string>
</resources>