<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/iv_imageDefault"
            android:layout_width="280dp"
            android:layout_height="145dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            android:contentDescription="@string/imagedefault"
            android:src="@drawable/default_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tv_namaKategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="10dp"
            android:text="@string/nama_kategori"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_imageDefault"/>
        <ImageView
            android:id="@+id/iv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star_rating"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/bintang"
            app:layout_constraintEnd_toStartOf="@id/tv_ratings"
            app:layout_constraintTop_toBottomOf="@id/iv_imageDefault"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv_ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_imageDefault"
            android:text="@string/kelas_rate"/>
        <TextView
            android:id="@+id/tv_titleCourse"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="10dp"
            android:text="@string/topic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_namaKategory"/>
        <TextView
            android:id="@+id/tv_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="10dp"
            android:text="@string/publis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titleCourse"/>
        <ImageView
            android:id="@+id/iv_tingkatKesulitan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tingkat_kesulitan"
            android:contentDescription="@string/level"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_publisher"/>

        <TextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="30dp"
            android:text="@string/lvl_course"
            app:layout_constraintStart_toStartOf="@id/iv_tingkatKesulitan"
            app:layout_constraintTop_toBottomOf="@id/tv_publisher"/>
        <ImageView
            android:id="@+id/iv_modul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/modul"
            android:contentDescription="@string/moduleContent"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@id/tv_modul"
            app:layout_constraintTop_toBottomOf="@id/tv_publisher"/>

        <TextView
            android:id="@+id/tv_modul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/jml_modul"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_publisher"/>

        <ImageView
            android:id="@+id/iv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/time_course"
            android:contentDescription="@string/timer"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_level"/>
        <TextView
            android:id="@+id/timerCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:text="@string/total_durasi"
            app:layout_constraintStart_toStartOf="@id/iv_timer"
            app:layout_constraintTop_toBottomOf="@id/tv_modul"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_buy"
            android:layout_width="190dp"
            android:layout_height="48dp"
            app:cornerRadius="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/beli"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timerCourse" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>