<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_notification"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/Notifikasi"
            android:src="@drawable/notification"/>
        <TextView
            android:id="@+id/tv_pengumuman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/Pengumuman"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_notification"/>


        <ImageView
            android:id="@+id/iv_indikator"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/indikator_lamp"
            android:contentDescription="@string/lamp"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="10dp"
            android:text="@string/tanggal_notifikasi"
            app:layout_constraintEnd_toStartOf="@id/iv_indikator"/>
        <TextView
            android:id="@+id/tv_isiPesan"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="35dp"
            android:text="@string/isi_notif"
            app:layout_constraintTop_toBottomOf="@id/tv_pengumuman"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.cardview.widget.CardView>